fix: update api verifySmsCode sendSmsCode add username
